@@ -219,6 +219,8 @@ RelaxPermissions=0
 # Check if directories are owned by logon user.  Set to false, if you have, for
 # example, home directories owned by some other user.
 CheckDirOwner=true
+# If your HOME is managed by automounter, set to true
+SupportAutomount=false
 # Number of seconds to wait after a failed login
 #RetryDelay=1
 # Maximum size of a file we wish to read.  This makes it hard for a user to DoS
